[package]
name = "lexdata"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Mendel-Gleason"]
licence = "Apache-2.0"
exclude = [".gitignore", ".github/"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rug = "1.16.0"
bytes = "1.2.1"
byteorder = "1.4.3"
libc = "0.2.126"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
